@@ -100,6 +100,8 @@ Bugs fixed
 * #7676: autodoc: typo in the default value of autodoc_member_order
 * #7676: autodoc: wrong value for :member-order: option is ignored silently
 * #7676: autodoc: member-order="bysource" does not work for C module
+* #3673: autodoc: member-order="bysource" does not work for a module having
+  __all__
 * #7668: autodoc: wrong retann value is passed to a handler of
   autodoc-proccess-signature
 * #7551: autosummary: a nested class is indexed as non-nested class
